--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "sails": "~0.10.3",
     "sails-disk": "~0.10.0",
+    "connect": "^3.4.0",
+    "cookie": "^0.2.3",
     "rc": "~0.5.0",
+    "redis": "^2.4.1",
     "include-all": "~0.1.3",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
